fixed jumping img in card during collapse

--- a/restaurant/static/styles.css
+++ b/restaurant/static/styles.css
@@ -26,7 +26,6 @@
     height: 150px; 
     width: auto; 
     display: block; 
-    /*margin: 0 auto;*/
 }
 
 .collapse-td {
@@ -34,12 +33,17 @@
     vertical-align: top;
 }
 
+.collapse {
+    max-height: 0;
+    transition: max-height 0.3s ease-in-out;
+    padding: 20px;
+    margin-left: 30px;
+}
+
+
 #carousel-div{
     width: calc(80%);
-    display: flex;
-    justify-content: center; /* Wyśrodkowanie w poziomie */
-    align-items: center; /* Wyśrodkowanie w pionie */
-    height: 100%;
+    justify-content: center;
 }
 
 #orderList{
@@ -84,8 +88,8 @@
     margin-right: 10px;
 }
 
-#nav_main{
-    min-height: calc(100vh - 200px);
+main{
+    min-height: calc(100vh - 266px);
 }
 
 html, body {
